--- a/circle.yml
+++ b/circle.yml
@@ -1,3 +1,8 @@
 machine:
   node:
     version: 4.2.2
+deployment:
+  production:
+    branch: master
+    commands:
+      - ./scripts/production.sh
