--- a/circle.yml
+++ b/circle.yml
@@ -6,4 +6,6 @@ deployment:
     branch: master
     commands:
       - git checkout gh-pages
+      - git merge master
+      - git push origin gh-pages
       - ./scripts/production.sh
