--- a/circle.yml
+++ b/circle.yml
@@ -5,5 +5,5 @@ deployment:
   production:
     branch: master
     commands:
-      - git push https://$GITHUB_TOKEN:x-oauth-basic@@github.com:Robert-W/circle-ci-test.git gh-pages
+      - git push https://$GITHUB_TOKEN:x-oauth-basic@@github.com/Robert-W/circle-ci-test.git gh-pages
       - ./scripts/production.sh
