--- a/package.json
+++ b/package.json
@@ -4,6 +4,7 @@
   "description": "Testing Simple App with Circle CI",
   "scripts": {
     "test": "mocha --reporter nyan",
+    "isty": "istanbul cover _mocha",
     "production": "echo 'success'"
   },
   "repository": {
@@ -17,7 +18,8 @@
   "homepage": "https://github.com/Robert-W/circle-ci-test#readme",
   "dependencies": {
     "chai": "^3.4.1",
-    "mocha": "^2.3.4",
-    "express": "^4.0"
+    "express": "^4.0",
+    "istanbul": "^0.4.2",
+    "mocha": "^2.3.4"
   }
 }
