Updated circle to auto-deploy to Heroku on passing tests

--- a/circle.yml
+++ b/circle.yml
@@ -13,3 +13,5 @@ deployment:
       - git merge master
       - git push https://$GITHUB_TOKEN:x-oauth-basic@github.com/SwampGuzzler/slack-circleCI.git gh-pages
       - ./scripts/production.sh
+    heroku:
+      appname: circle-ci-test
