--- a/circle.yml
+++ b/circle.yml
@@ -8,10 +8,12 @@ machine:
 deployment:
   production:
     branch: master
+    heroku:
+      appname: circle-ci-test
+  staging:
+    branch: master
     commands:
       - git checkout gh-pages
       - git merge master
       - git push https://$GITHUB_TOKEN:x-oauth-basic@github.com/SwampGuzzler/slack-circleCI.git gh-pages
       - ./scripts/production.sh
-    heroku:
-      appname: circle-ci-test
