--- a/circle.yml
+++ b/circle.yml
@@ -10,6 +10,8 @@ deployment:
     branch: master
     heroku:
       appname: circle-ci-test
+  staging:
+    branch: master
     commands:
       - git checkout gh-pages
       - git merge master
